--- a/app/assets/stylesheets/places/_header.scss
+++ b/app/assets/stylesheets/places/_header.scss
@@ -11,6 +11,10 @@
   background-color: rgba(53, 53, 84, 0.2);
   color: #fafafa;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px;
 }
 
 .place-header__title {
@@ -21,7 +25,6 @@
   text-shadow: rgba(0, 0, 0, 0.8) 1px 2px 2px;
   letter-spacing: 1px;
   line-height: 2;
-  padding-top: 20px;
   white-space: nowrap;
 }
 
