Flight profiles. Zoom on both axis

--- a/app/views/flight_profiles/show.html.haml
+++ b/app/views/flight_profiles/show.html.haml
@@ -27,4 +27,4 @@
                      'data-controller': 'select2--exit-measurements',
                      'data-action': 'change->flight-profiles--exit-measurement#toggle'
 
-    .flight-profiles__chart-container{'data-target': 'flight-profiles.chart'}
+    .flight-profiles__chart-container{'data-controller': 'flight-profiles--chart', 'data-target': 'flight-profiles.chart'}
