track design improvements

--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -7,6 +7,7 @@
 @import 'bootstrap_variables_overrides';
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import '../bootstrap_elements_override';
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
@@ -17,6 +18,7 @@
 @import '../common/**/*';
 @import '../blocks/**/*';
 @import '../events/**/*';
+@import '../tracks/**/*';
 @import '../places/**/*';
 
 @import 'variables';
