--- a/app/views/track_files/_new_modal.html.haml
+++ b/app/views/track_files/_new_modal.html.haml
@@ -65,18 +65,7 @@
                                      type: 'text',
                                      value: recent_value(:location)
 
-            .form-group
-              = builder.label :kind, t('activerecord.attributes.track.kind'), class: 'col-sm-3 control-label'
-              .btn-group.col-sm-9{data: {toggle: 'buttons'}}
-                - recent_activity = recent_value(:activity)
-                - activity_skydive = (recent_activity == 'skydive' || recent_activity.nil?)
-                %label.btn.btn-default{class: ('active' if activity_skydive)}
-                  = builder.radio_button :kind, 'skydive', checked: activity_skydive
-                  = 'Skydive'
-                %label.btn.btn-default{class: ('active' unless activity_skydive)}
-                  = builder.radio_button :kind, 'base', checked: !activity_skydive
-                  = 'B.A.S.E'
-
+            = render 'tracks/form/activity', form: builder
             = render 'tracks/form/visibility', form: builder
 
           .form-group
