--- a/app/views/tracks/_indicators.html.haml
+++ b/app/views/tracks/_indicators.html.haml
@@ -1,8 +1,7 @@
 .track-indicators
-  .indicators-wrapper
+  .track-indicators__column
     .track-indicators__indicator
-      .param
-        =t '.distance'
+      .track-indicators__param= t '.distance'
       .param-val
         .avg-val= presenter.distance
         .units= t "units.#{presenter.distance_units}"
@@ -17,25 +16,23 @@
             = presenter.distance_wind_effect
 
     .track-indicators__indicator
-      .param
-        =t '.elevation'
+      .track-indicators__param= t '.elevation'
       .param-val
         .avg-val= presenter.elevation
         .units= t "units.#{presenter.altitude_units}"
 
-  .indicators-wrapper
+  .track-indicators__column
     .track-indicators__indicator
-      .param
-        =t '.ground_speed'
+      .track-indicators__param= t '.ground_speed'
       .param-val
         .avg-val= presenter.avg_horizontal_speed
         .min-max
           .max-val
             %span= presenter.max_horizontal_speed
-            %i.fa.fa-lg.fa-caret-up
+            %i.fa.fa-chevron-up
           .min-val
             %span= presenter.min_horizontal_speed
-            %i.fa.fa-lg.fa-caret-down.min-val-caret
+            %i.fa.fa-chevron-down.min-val-caret
         .units=t "units.#{presenter.speed_units}"
       - if presenter.wind_cancelation?
         .progress.track-indicators__wind-effect
@@ -48,32 +45,30 @@
             = presenter.horizontal_speed_wind_effect
 
     .track-indicators__indicator
-      .param
-        =t '.vertical_speed'
+      .track-indicators__param= t '.vertical_speed'
       .param-val
         .avg-val= presenter.avg_vertical_speed
         .min-max
           .min-val
             %span= presenter.max_vertical_speed
-            %i.fa.fa-lg.fa-caret-up
+            %i.fa.fa-chevron-up
           .max-val
             %span= presenter.min_vertical_speed
-            %i.fa.fa-lg.fa-caret-down.min-val-caret
+            %i.fa.fa-chevron-down.min-val-caret
         .units=t "units.#{presenter.speed_units}"
 
-  .indicators-wrapper
+  .track-indicators__column
     .track-indicators__indicator
-      .param
-        =t '.glide_ratio'
+      .track-indicators__param= t '.glide_ratio'
       .param-val
         .avg-val= presenter.glide_ratio
         .min-max
           .max-val
             %span= presenter.max_glide_ratio
-            %i.fa.fa-lg.fa-caret-up
+            %i.fa.fa-chevron-up
           .min-val
             %span= presenter.min_glide_ratio
-            %i.fa.fa-lg.fa-caret-down.min-val-caret
+            %i.fa.fa-chevron-down.min-val-caret
       - if presenter.wind_cancelation?
         .progress.track-indicators__wind-effect
           .progress-bar.progress-bar-success{style: "width: #{presenter.zero_wind_distance_in_percents}%;"}
@@ -85,8 +80,7 @@
             = presenter.glide_ratio_wind_effect
 
     .track-indicators__indicator
-      .param
-        =t '.duration'
+      .track-indicators__param= t '.duration'
       .param-val
         .avg-val= presenter.time
         .units= t 'units.t_unit'
