--- a/app/assets/stylesheets/mobile/pages/tracks/_track_indicators.scss
+++ b/app/assets/stylesheets/mobile/pages/tracks/_track_indicators.scss
@@ -1,52 +1,20 @@
-.track-indicators {
-  display: flex;
-  justify-content: space-around;
-}
-
 .track-indicators__column {
   padding-left: 8px;
   padding-right: 8px;
+  flex-basis: 0;
+  flex-grow: 1;
+  overflow-x: hidden;
 }
 
 .track-indicators__indicator {
-  max-width: 128px;
-  margin-top: 8px;
+  margin-top: 10px;
   margin-bottom: 2px;
-}
 
-.track-indicators__avg-val {
-  display: inline;
-  font-size: 2em;
-  font-weight: 200;
-}
-
-.track-indicators__units {
-  display: inline;
-}
-
-.track-indicators__min-max {
-  display: inline-block;
-  text-align: right;
-}
-
-.track-indicators__min-val,
-.track-indicators__max-val {
-  font-size: 0.8em;
-  line-height: 0.8em;
-}
-
-.track-indicators__min-val {
-  color: #9a3558;
-}
-
-.track-indicators__max-val {
-  color: #4b725a;
+  &:first-child {
+    margin-top: 10px;
+  }
 }
 
 .track-indicators__param {
-  font-size: 0.8em;
-  color: #888;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  font-size: 14px;
 }
