--- a/app/views/tracks/_header.html+mobile.haml
+++ b/app/views/tracks/_header.html+mobile.haml
@@ -1,45 +1,40 @@
 .track-header
-  .track-header__track-id
-    = t 'tracks.show.title_track'
-    = "##{track.id}"
-    - if track.unlisted_track?
-      %i.fa.fa-eye-slash{'data-toggle': 'tooltip', title: t('visibility.unlisted')}
-    - elsif track.private_track?
-      %i.fa.fa-lock{'data-toggle': 'tooltip', title: t('visibility.private')}
-
-  .track-header__pilot
+  .track-header__photo
     - if track.pilot
-      = link_to profile_path(track.pilot), class: 'track-header__pilot-link' do
-        .track-header__pilot-photo
-          = image_tag track.pilot.userpic.url(:thumb), :class => 'img-rounded img-50 loading-bg'
-        .track-header__pilot-name
-          = track.pilot.name
-    - else
-      .track-header__pilot-link
-        .track-header__pilot-name
-          = track.name
-  .track-header__suit
-    %span= t('tracks.show.title_suit') + ':'
-    - if track.suit
-      - manufacturer = track.suit.manufacturer
-      %a{href: suit_path(track.suit)}
-        = suit_presentation(track.suit)
-    - else
-      %span= track.missing_suit_name
-  .track-header__place
-    %span.no-right-space
-      %i.fa.fa-map-marker
-      - if track.place
-        %a{href: place_path(track.place)}
-          %span
-          = place_presentation(track.place)
-      - else
-        %span= track.location
+      = image_tag track.pilot.userpic.url(:thumb)
+
+  .track-header__data
+    .track-header__row
+      .track-header__pilot-name
+        = track.pilot&.name.presence || track.name
+      - if track.unlisted_track?
+        %i.fa.fa-eye-slash{'data-toggle': 'tooltip', title: t('visibility.unlisted')}
+      - elsif track.private_track?
+        %i.fa.fa-lock{'data-toggle': 'tooltip', title: t('visibility.private')}
+
+    .track-header__row
+      %span.track-header__place
+        - if track.place
+          %a{href: place_path(track.place)}
+            %span
+            = place_presentation(track.place)
+        - else
+          %span= track.location
+
+      %span.track-header__suit
+        - if track.suit
+          - manufacturer = track.suit.manufacturer
+          %a{href: suit_path(track.suit)}
+            = suit_presentation(track.suit)
+        - else
+          %span= track.missing_suit_name
+
   .pull-right
     - if policy(track).edit?
       %a.btn-flat.btn-tab{href: edit_track_path(track)}
         %i.fa.fa-pencil
 
+.track-navbar
   .tabs-navbar
     .tabs-navbar__fade-right
     %ul.tabs-navbar__menu
