switch icons from fontawesome

--- a/app/assets/stylesheets/fonts/_app_icons.scss
+++ b/app/assets/stylesheets/fonts/_app_icons.scss
@@ -15,3 +15,4 @@ $icon-remove:       '\e911';
 $icon-track:        '\e907';
 $icon-location:     '\e908';
 $icon-wingsuit:     '\e909';
+$icon-arrow-light:  '\e914';
