--- a/app/views/users/_sign_in_sign_up_modal.html.haml
+++ b/app/views/users/_sign_in_sign_up_modal.html.haml
@@ -15,3 +15,4 @@
         = 'или'
         = link_to 'Зарегистрироваться', new_registration_path(:user), :class => 'btn btn-default'
         = 'и иметь полностью заполненный профиль'
+        = link_to t('application.header.sign_in_facebook'), user_facebook_omniauth_authorize_path
