--- a/app/views/static_pages/_index_header.html.haml
+++ b/app/views/static_pages/_index_header.html.haml
@@ -63,7 +63,7 @@
                         =t('application.header.remember_me')
                     .form-group
                       = f.submit t('application.header.sign_in'), class: 'btn btn-success btn-block'
-                  = link_to t('application.header.sign_in_facebook'), user_facebook_omniauth_authorize_path
+                  = link_to t('devise.shared.links.sign_in_with_provider', provider: 'Facebook'), user_facebook_omniauth_authorize_path
                   %br
                   = link_to t('application.header.forgot_pass'), new_password_path(:user)
                 %hr
