--- a/app/views/users/_sign_in_sign_up_modal.html.haml
+++ b/app/views/users/_sign_in_sign_up_modal.html.haml
@@ -15,3 +15,5 @@
         = 'или'
         = link_to 'Зарегистрироваться', new_registration_path(:user), :class => 'btn btn-default'
         = 'и иметь полностью заполненный профиль'
+        %br
+        = link_to t('devise.shared.links.sign_in_with_provider', provider: 'Facebook'), user_facebook_omniauth_authorize_path
