--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -3,7 +3,7 @@
   %head
     = render 'layouts/head'
 
-    = stylesheet_link_tag 'mobile/application', media: 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'mobile/application', media: 'all', 'data-turbolinks-track': 'reload'
 
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"}
 
