--- a/app/views/static_pages/_index_header.html.haml
+++ b/app/views/static_pages/_index_header.html.haml
@@ -43,32 +43,8 @@
             %li
               = link_to t('application.header.sign_out'), destroy_user_session_path, method: :delete
       - else
-        %li.dropdown
-          .dropdown-toggle.button-navbar.button--white{data: {toggle: 'dropdown'}}
-            =t 'application.header.sign_in'
-          %ul.dropdown-menu.login-menu
-            %li
-              .row
-                .col-md-12
-                  = form_for(:user, url: session_path(:user), html: {class: 'form sign-in-form', role: 'form'}) do |f|
-                    .form-group
-                      = label_tag 'user_email', 'Email address', for: 'user_email', class: 'sr-only'
-                      = f.text_field :email, class: 'form-control', type: 'email', placeholder: t('application.header.login_email')
-                    .form-group
-                      = label_tag 'user_password', 'Password', for: 'user_password', class: 'sr-only'
-                      = f.password_field :password, class: 'form-control', placeholder: t('application.header.password')
-                    .checkbox
-                      %label
-                        = f.check_box :remember_me, checked: true
-                        =t('application.header.remember_me')
-                    .form-group
-                      = f.submit t('application.header.sign_in'), class: 'btn btn-success btn-block'
-                  = link_to t('devise.shared.links.sign_in_with_provider', provider: 'Facebook'), user_facebook_omniauth_authorize_path
-                  %br
-                  = link_to t('application.header.forgot_pass'), new_password_path(:user)
-                %hr
-                .col-sm-12.hidden-md
-                  = link_to t('application.header.sign_up'), new_user_registration_path
+        %li
+          = link_to t('application.header.sign_in'), new_user_session_path, class: 'button-navbar button--white'
         %li.hidden-sm
           = link_to t('application.header.sign_up'), new_user_registration_path, class: 'button-navbar button--aqua'
 
